syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "DeviceStateModel";

import "sitewhere-common.proto";
import "device-event-model.proto";

// ####################
// ### DEVICE STATE ###
// ####################

// Request for creating device state.
message GDeviceStateCreateRequest {
	GUUID deviceId = 1;
	GUUID deviceTypeId = 2;
	GUUID deviceAssignmentId = 3;
	GUUID customerId = 4;
	GUUID areaId = 5;
	GUUID assetId = 6;
	uint64 lastInteractionDate = 7;
	uint64 presenceMissingDate = 8;
}

// Request for merging events into device state.
message GDeviceStateEventMergeRequest {
	repeated GDeviceLocation locations = 1;
	repeated GDeviceMeasurement measurements = 2;
	repeated GDeviceAlert alerts = 3;
}

// Criteria for searching device states.
message GDeviceStateSearchCriteria {
	uint64 lastInteractionDateBefore = 1;
	repeated string deviceTypeToken = 2;
	repeated string customerToken = 3;
	repeated string areaToken = 4;
	repeated string assetToken = 5;
	GPaging paging = 6;
}

// Results for device state search.
message GDeviceStateSearchResults {
	uint64 count = 1;
	repeated GDeviceState deviceStates = 2;
}

// Device state.
message GDeviceState {
	GUUID id = 1;
	GUUID deviceId = 2;
	GUUID deviceTypeId = 3;
	GUUID deviceAssignmentId = 4;
	GUUID customerId = 5;
	GUUID areaId = 6;
	GUUID assetId = 7;
	uint64 lastInteractionDate = 8;
	uint64 presenceMissingDate = 9;
}
